samples/_failures_safe/1761615991_585205_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5a274bc.c: In function ‘main’:
./samples/SAFE/__tmp_d5a274bc.c:122:12: error: expected identifier or ‘(’ at end of input
  122 |     struct Matrix
      |            ^~~~~~
./samples/SAFE/__tmp_d5a274bc.c:122:12: error: expected declaration or statement at end of input
